--- a/index.html
+++ b/index.html
@@ -307,6 +307,51 @@
 
    <!-- --------------------------------------///СЕКЦИЯ ПЕРЕВАГИ------------------------------------ -->
 
+
+<section class="section-spivpracia">
+
+  
+
+  <div class="mustang-box"><img class="mustang-picture" src="./img/FordMustangEdition55Fa.webp" alt="">
+    <svg class="light" width="156" height="250" viewBox="0 0 156 250" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <g opacity="0.55">
+        <g style="mix-blend-mode:screen" filter="url(#filter0_f_8001_3087)">
+          <path d="M115.983 47.7343L108.447 236.273C108.444 236.326 108.516 236.345 108.54 236.297L115.982 221.536C115.984 221.532 115.986 221.529 115.989 221.525L125.588 210.398C125.591 210.394 125.595 210.391 125.599 210.389L126.817 209.598C126.819 209.597 126.821 209.595 126.824 209.594L136.002 205.465C136.018 205.458 136.029 205.442 136.031 205.424L148.521 42.5039C148.523 42.472 148.495 42.4462 148.463 42.4513L116.025 47.6874C116.001 47.6912 115.984 47.7108 115.983 47.7343Z" fill="url(#paint0_linear_8001_3087)" />
+        </g>
+        <g style="mix-blend-mode:screen" filter="url(#filter1_f_8001_3087)">
+          <path d="M5.90467 6.19549L109.506 238.741C109.524 238.781 109.582 238.779 109.597 238.738L115.986 221.539C115.988 221.533 115.991 221.528 115.995 221.524L125.592 210.398C125.595 210.394 125.599 210.391 125.602 210.389L126.821 209.598C126.823 209.597 126.825 209.596 126.828 209.595L136.026 205.457C136.03 205.455 136.034 205.452 136.038 205.449L341.823 24.1421C341.856 24.1128 341.837 24.0579 341.793 24.0556L5.95252 6.12594C5.9156 6.12398 5.88963 6.16171 5.90467 6.19549Z" fill="url(#paint1_linear_8001_3087)" />
+        </g>
+      </g>
+      <defs>
+        <filter id="filter0_f_8001_3087" x="94.8373" y="28.8407" width="67.2941" height="221.093" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+          <feFlood flood-opacity="0" result="BackgroundImageFix" />
+          <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+          <feGaussianBlur stdDeviation="6.80498" result="effect1_foregroundBlur_8001_3087" />
+        </filter>
+        <filter id="filter1_f_8001_3087" x="0.456411" y="0.681997" width="346.827" height="243.532" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+          <feFlood flood-opacity="0" result="BackgroundImageFix" />
+          <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+          <feGaussianBlur stdDeviation="2.72199" result="effect1_foregroundBlur_8001_3087" />
+        </filter>
+        <linearGradient id="paint0_linear_8001_3087" x1="121.296" y1="211.508" x2="128.358" y2="45.4668" gradientUnits="userSpaceOnUse">
+          <stop stop-color="white" />
+          <stop offset="0.36" stop-color="white" stop-opacity="0.33" />
+          <stop offset="0.635" stop-color="white" stop-opacity="0.05" />
+          <stop offset="1" stop-color="white" stop-opacity="0" />
+        </linearGradient>
+        <linearGradient id="paint1_linear_8001_3087" x1="121.3" y1="211.508" x2="128.362" y2="45.4666" gradientUnits="userSpaceOnUse">
+          <stop stop-color="white" />
+          <stop offset="0.36" stop-color="white" stop-opacity="0.33" />
+          <stop offset="0.635" stop-color="white" stop-opacity="0.05" />
+          <stop offset="1" stop-color="white" stop-opacity="0" />
+        </linearGradient>
+      </defs>
+    </svg>
+  </div>
+</section>
+
+
+
 <!-- -----------------------------------------SCRIPT------------------------------------------ -->
 
 <!-- УСЛУГИ -->
