--- a/index.html
+++ b/index.html
@@ -347,6 +347,9 @@
         </linearGradient>
       </defs>
     </svg>
+    <div class="spivpracia-container">
+      <h2 class="subtitle-spivpracia">Як відбувається співпраця з дилерами?</h2>
+    </div>
   </div>
 </section>
 
