--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
  <section class="service-section">
     <div class="container">
       
-      <div class="service-wrapper">
+     
         <div class="service-wrapper">
           <h2 class="subtitle-text">Послуги для вашого бізнесу</h2>
           <div class="service-card">
@@ -199,7 +199,7 @@
               Детальна інформація про цю послугу...
           </div>
         </div>
-      </div>
+  
   
     </div>
   </section>
@@ -359,20 +359,26 @@
 
 <!-- УСЛУГИ -->
 <script>
-    const wrappers = document.querySelectorAll('.service-wrapper');
-  
-    wrappers.forEach(wrapper => {
-      const card = wrapper.querySelector('.service-card');
-      card.addEventListener('click', () => {
-        wrappers.forEach(w => {
-          if (w !== wrapper) {
-            w.classList.remove('expanded');
-          }
-        });
-        wrapper.classList.toggle('expanded');
-      });
+  const wrappers = document.querySelectorAll('.service-wrapper');
+
+  wrappers.forEach(wrapper => {
+    const card = wrapper.querySelector('.service-card');
+
+    card.addEventListener('click', () => {
+      const isAlreadyExpanded = wrapper.classList.contains('expanded');
+
+      // Закрываем все карточки
+      wrappers.forEach(w => w.classList.remove('expanded'));
+
+      // Если клик был НЕ по уже открытой — открываем
+      if (!isAlreadyExpanded) {
+        wrapper.classList.add('expanded');
+      }
     });
-  </script>
+  });
+</script>
+
+
 
 <!-- ПЕРЕВАГИ -->
 
