--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@
    <!-- --------------------------------------///СЕКЦИЯ ПЕРЕВАГИ------------------------------------ -->
 
 
+   <!-- ----------------------------------------СЕКЦИЯ СПІВПРАЦЯ-------------------------------------- -->
+
 <section class="section-spivpracia">
 
   
@@ -349,9 +351,35 @@
     </svg>
     <div class="spivpracia-container">
       <h2 class="subtitle-spivpracia">Як відбувається співпраця з дилерами?</h2>
+      <div class="numbers-box">
+        <div class="number-line">
+          <div class="number-round">01</div>
+          <div class="horizontal-line"></div>
+        </div>
+        <div class="number-line">
+          <div class="number-round">02</div>
+          <div class="horizontal-line"></div>
+        </div>
+        <div class="number-line">
+          <div class="number-round">03</div>
+          <div class="horizontal-line"></div>
+        </div>
+        <div class="number-line">
+          <div class="number-round">04</div>
+          <div class="horizontal-line"></div>
+        </div>
+        <div class="number-line">
+          <div class="number-round">05</div>
+          <div class="horizontal-line"></div>
+        </div>
+      </div>
     </div>
+    
   </div>
 </section>
+
+
+  <!-- ---------------------------------------///СЕКЦИЯ СПІВПРАЦЯ-------------------------------------- -->
 
 
 
