--- a/index.html
+++ b/index.html
@@ -349,6 +349,62 @@
         </linearGradient>
       </defs>
     </svg>
+
+
+    <div class="red-light">
+      <svg width="13" height="72" viewBox="0 0 13 72" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g style="mix-blend-mode:screen" filter="url(#filter0_f_8001_3086)">
+          <path d="M6.17631 67.2221L2.96418 2.78486C2.96249 2.75099 2.9946 2.72549 3.0272 2.73481L7.26547 3.94574C7.28151 3.95033 7.29416 3.96269 7.29912 3.97862L7.53863 4.74797L9.39019 8.87321C9.39305 8.87958 9.39453 8.88649 9.39453 8.89347V69.0702C9.39453 69.1086 9.35278 69.1323 9.31979 69.1128L6.20049 67.2622C6.18622 67.2538 6.17714 67.2387 6.17631 67.2221Z" fill="url(#paint0_linear_8001_3086)" />
+        </g>
+        <defs>
+          <filter id="filter0_f_8001_3086" x="0.242854" y="0.0109205" width="11.8737" height="71.8307" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+            <feGaussianBlur stdDeviation="1.36099" result="effect1_foregroundBlur_8001_3086" />
+          </filter>
+          <linearGradient id="paint0_linear_8001_3086" x1="6.42509" y1="2.83955" x2="6.42509" y2="69.1571" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#FF200F" />
+            <stop offset="1" stop-color="#991309" stop-opacity="0" />
+          </linearGradient>
+        </defs>
+      </svg>
+
+      <svg width="12" height="64" viewBox="0 0 12 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g style="mix-blend-mode:screen" filter="url(#filter0_f_8001_3093)">
+          <path d="M6.03148 59.3483L2.82006 3.44301C2.81815 3.40973 2.84902 3.38411 2.88138 3.39213L7.12092 4.44328C7.13699 4.44726 7.15 4.45902 7.15559 4.4746L7.3941 5.13944L9.24447 8.71695C9.2481 8.72398 9.25 8.73178 9.25 8.73969V60.9515C9.25 60.9886 9.21079 61.0125 9.17786 60.9955L6.05824 59.3895C6.04266 59.3815 6.03249 59.3658 6.03148 59.3483Z" fill="url(#paint0_linear_8001_3093)" />
+        </g>
+        <defs>
+          <filter id="filter0_f_8001_3093" x="0.0983229" y="0.668635" width="11.8737" height="63.0543" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+            <feGaussianBlur stdDeviation="1.36099" result="effect1_foregroundBlur_8001_3093" />
+          </filter>
+          <linearGradient id="paint0_linear_8001_3093" x1="6.28056" y1="3.48334" x2="6.28056" y2="61.0327" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#FF200F" />
+            <stop offset="1" stop-color="#991309" stop-opacity="0" />
+          </linearGradient>
+        </defs>
+      </svg>
+
+      <svg width="13" height="51" viewBox="0 0 13 51" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <g style="mix-blend-mode:screen" filter="url(#filter0_f_8001_3094)">
+          <path d="M6.88239 46.3834L3.67254 2.9761C3.67013 2.9436 3.69925 2.91768 3.73125 2.92385L7.97328 3.74088C7.98893 3.7439 8.00217 3.75426 8.00885 3.76873L8.24405 4.27804C8.24512 4.28036 8.24637 4.28259 8.24779 4.28472L10.0933 7.05647C10.0987 7.06459 10.1016 7.07414 10.1016 7.0839V47.6276C10.1016 47.6626 10.0662 47.6866 10.0337 47.6736L6.91337 46.4257C6.8958 46.4187 6.88378 46.4023 6.88239 46.3834Z" fill="url(#paint0_linear_8001_3094)" />
+        </g>
+        <defs>
+          <filter id="filter0_f_8001_3094" x="0.949885" y="0.200862" width="11.8737" height="50.1984" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+            <feGaussianBlur stdDeviation="1.36099" result="effect1_foregroundBlur_8001_3094" />
+          </filter>
+          <linearGradient id="paint0_linear_8001_3094" x1="7.13212" y1="2.99503" x2="7.13212" y2="47.7007" gradientUnits="userSpaceOnUse">
+            <stop stop-color="#FF200F" />
+            <stop offset="1" stop-color="#991309" stop-opacity="0" />
+          </linearGradient>
+        </defs>
+      </svg>
+    </div>
+
+
     <div class="spivpracia-container">
       <h2 class="subtitle-spivpracia">Як відбувається співпраця з дилерами?</h2>
       <div class="numbers-box">
@@ -374,6 +430,8 @@
         </div>
       </div>
     </div>
+    
+
     
   </div>
 </section>
