--- a/index.html
+++ b/index.html
@@ -501,9 +501,55 @@
     </section>
 
 
-
-
  <!-- -------------------------------------///СЕКЦИЯ ТАРИФЫ---------------------------------------- -->
+
+<!-- -----------------------------------------СЕКЦИЯ ПРО CRM------------------------------------------------------ -->
+<section class="section-crm">
+  <div class="container">
+    <h2 class="subtitle-crm">Наша CRM-система створена спеціально для автодилерів.</h2>
+    <p class="description-crm">
+      З нами ви отримуєте все це і навіть більше:
+    </p>
+
+    <div class="crm-wrapper">
+      <div class="crm-box">
+        <span class="number-crm">01</span>
+        <div class="crm-text-box"><p>Доступ до закритих аукціонів США та Канади — напряму з особистого кабінету в нашій CRM-системі.</p></div>
+      </div>
+      <div class="crm-box">
+        <span class="number-crm">02</span>
+        <div class="crm-text-box"><p>Можливість створення персональних брокерських акаунтів на IAAI — для повної автономності у торгах</p></div>
+      </div>
+      <div class="crm-box">
+        <span class="number-crm">03</span>
+        <div class="crm-text-box"><p>Підтримку бідерів — консультації, покрокові інструкції.</p></div>
+      </div>
+      <div class="crm-box">
+        <span class="number-crm">04</span>
+        <div class="crm-text-box"><p>Відстеження логістики — контроль переміщення авто на кожному етапі.</p></div>
+      </div>
+      <div class="crm-box">
+        <span class="number-crm">05</span>
+        <div class="crm-text-box"><p>Фінансовий контроль — зручна бухгалтерія та звітність у режимі реального часу.</p></div>
+      </div>
+      <div class="crm-box">
+        <span class="number-crm">06</span>
+        <div class="crm-text-box"><p>Аналітику та можливість масштабування для вашого автобізнесу.</p></div>
+      </div>
+      <div class="crm-box">
+        <span class="number-crm">07</span>
+        <div class="crm-text-box"><p>Кастомізований доступ — налаштування прав для співробітників та партнерів.</p></div>
+      </div>
+    
+    </div>
+
+   
+
+  </div>
+</section>
+
+
+<!-- -----------------------------------------///СЕКЦИЯ ПРО CRM------------------------------------------------------ -->
 
 <!-- -----------------------------------------SCRIPT------------------------------------------ -->
 
