--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <h2 class="subtitle-hero-text">Усе необхідне для розвитку вашого бізнесу з авто зі США <span class="desktop-title-part">— ліцензія, доступ до аукціонів, комплексна логістика, власна CRM-система та страхування.</span> </h2>
    
-    <a class="consultation-button" href="#">Отримати консультацію</a>
+    <a class="consultation-button" href="#form">Отримати консультацію</a>
 </div>
     </section>
 
@@ -137,7 +137,7 @@
 
  <!-- ---------------------------------------СЕКЦИЯ УСЛУГИ---------------------------------- -->
 
- <section class="service-section">
+ <section class="service-section" id="uslugi">
     <div class="container">
       
      
@@ -453,7 +453,7 @@
       </div>
       </div>
 
-      <button class="spivpracia-consultacia-btn">Замовити презентацію</button>
+     <a href="#form"class="spivpracia-consultacia-btn">Замовити презентацію</a> 
     </div>
   </div>
 </section>
@@ -495,7 +495,7 @@
           <p class="tarifi-dscr">Також ви можете замовити окремі послуги — викуп авто, доставка, розмитнення тощо.
             Детальну інформацію про ціни на всі послуги ви знайдете в розділі</p>
 
-            <button class="tarifi-btn">Послуги</button>
+            <a href="#uslugi" class="tarifi-btn">Послуги</a>
   
       </div>
     </section>
@@ -552,7 +552,7 @@
 
 <!-- --------------------------------------------СЕКЦИЯ ФОРМА ЗАЯВКИ------------------------------------- -->
 
-<section class="section-form">
+<section class="section-form" id="form">
  
   <div class="container">
       <h2 class="title-form">Потрібна допомога з підбором авто?</h2>
