--- a/index.html
+++ b/index.html
@@ -122,15 +122,16 @@
     <section class="hero-section">
 <div class="container">
     
-        <div class="title-hero">
-            <h1 class="title-hero-text">Zvigerauto – надійний партнер для вашого автобізнесу</h1>
+        <div class="hero-content">
+          <div class="title-hero">
+              <h1 class="title-hero-text">Zvigerauto – надійний партнер для вашого автобізнесу</h1>
+          </div>
+          <h2 class="subtitle-hero-text">Усе необхідне для розвитку вашого бізнесу з авто зі США <span class="desktop-title-part">— ліцензія, доступ до аукціонів, комплексна логістика, власна CRM-система та страхування.</span> </h2>
+             <h2 class="subtitle-hero-text-desktop">Усе необхідне для розвитку вашого бізнесу з авто зі США — ліцензія, доступ до аукціонів, комплексна логістика, власна CRM-система та страхування.</h2>
+              <a class="consultation-button" href="#form">Отримати консультацію</a>
+          </div>
+              </section>
         </div>
-
-        <h2 class="subtitle-hero-text">Усе необхідне для розвитку вашого бізнесу з авто зі США <span class="desktop-title-part">— ліцензія, доступ до аукціонів, комплексна логістика, власна CRM-система та страхування.</span> </h2>
-   
-    <a class="consultation-button" href="#form">Отримати консультацію</a>
-</div>
-    </section>
 
  <!-- --------------------------------------///HERO-------------------------------------------- -->
 
