--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       </svg>
     <h3 class="perevagi-title">Доступ до CRM</h3>
     <p class="perevagi-card-text">Використовуйте нашу надсучасну CRM-систему для управління закупівлями, відстеження усіх процесів, бухгалтерії та перегляду поточних лотів.</p>
- <a class="perevagi-crm-btn" href="#form">Дізнатися більше</a>
+ <a class="perevagi-crm-btn" href="#crm">Дізнатися більше</a>
   </div>
 
           </div>
@@ -572,7 +572,7 @@
  <!-- -------------------------------------///СЕКЦИЯ ТАРИФЫ---------------------------------------- -->
 
 <!-- -----------------------------------------СЕКЦИЯ ПРО CRM------------------------------------------------------ -->
-<section class="section-crm">
+<section class="section-crm" id="crm">
   <div class="container">
     <h2 class="subtitle-crm">Наша CRM-система створена спеціально для автодилерів.</h2>
     <p class="description-crm">
