--- a/index.html
+++ b/index.html
@@ -472,6 +472,62 @@
       </svg>
     </div>
 
+    <div class="red-light-desktop">
+
+      <svg width="49" height="291" viewBox="0 0 49 291" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <g style="mix-blend-mode:screen" filter="url(#filter0_f_7862_749)">
+    <path d="M24.6079 272.18L11.6272 11.779C11.6204 11.6421 11.7501 11.5391 11.8819 11.5767L29.0094 16.4703C29.0742 16.4888 29.1254 16.5388 29.1454 16.6032L30.1133 19.7122L37.5957 36.383C37.6073 36.4087 37.6133 36.4367 37.6133 36.4649V279.649C37.6133 279.804 37.4446 279.9 37.3112 279.821L24.7056 272.343C24.648 272.308 24.6113 272.247 24.6079 272.18Z" fill="url(#paint0_linear_7862_749)" />
+  </g>
+  <defs>
+    <filter id="filter0_f_7862_749" x="0.626953" y="0.569336" width="47.9863" height="290.279" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+      <feFlood flood-opacity="0" result="BackgroundImageFix" />
+      <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+      <feGaussianBlur stdDeviation="5.5" result="effect1_foregroundBlur_7862_749" />
+    </filter>
+    <linearGradient id="paint0_linear_7862_749" x1="25.6133" y1="12" x2="25.6133" y2="280" gradientUnits="userSpaceOnUse">
+      <stop stop-color="#FF200F" />
+      <stop offset="1" stop-color="#991309" stop-opacity="0" />
+    </linearGradient>
+  </defs>
+</svg>
+
+<svg width="49" height="255" viewBox="0 0 49 255" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <g style="mix-blend-mode:screen" filter="url(#filter0_f_7862_756)">
+    <path d="M24.6067 237.193L11.6288 11.2709C11.6211 11.1364 11.7459 11.0329 11.8766 11.0653L29.0093 15.3131C29.0743 15.3292 29.1269 15.3768 29.1494 15.4397L30.1133 18.1264L37.5909 32.5837C37.6056 32.6121 37.6133 32.6437 37.6133 32.6756V243.672C37.6133 243.822 37.4548 243.918 37.3217 243.85L24.7149 237.36C24.6519 237.327 24.6108 237.264 24.6067 237.193Z" fill="url(#paint0_linear_7862_756)" />
+  </g>
+  <defs>
+    <filter id="filter0_f_7862_756" x="0.628906" y="0.0595703" width="47.9844" height="254.812" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+      <feFlood flood-opacity="0" result="BackgroundImageFix" />
+      <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+      <feGaussianBlur stdDeviation="5.5" result="effect1_foregroundBlur_7862_756" />
+    </filter>
+    <linearGradient id="paint0_linear_7862_756" x1="25.6133" y1="11.4339" x2="25.6133" y2="244" gradientUnits="userSpaceOnUse">
+      <stop stop-color="#FF200F" />
+      <stop offset="1" stop-color="#991309" stop-opacity="0" />
+    </linearGradient>
+  </defs>
+</svg>
+
+<svg width="49" height="203" viewBox="0 0 49 203" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <g style="mix-blend-mode:screen" filter="url(#filter0_f_7862_757)">
+    <path d="M24.6041 186.676L11.6325 11.2606C11.6228 11.1292 11.7405 11.0245 11.8698 11.0494L29.0125 14.3512C29.0758 14.3634 29.1293 14.4052 29.1563 14.4637L30.1068 16.5219C30.1111 16.5313 30.1162 16.5403 30.1219 16.5489L37.5798 27.75C37.6016 27.7828 37.6133 27.8214 37.6133 27.8608V191.705C37.6133 191.846 37.4704 191.943 37.339 191.89L24.7293 186.847C24.6583 186.819 24.6097 186.753 24.6041 186.676Z" fill="url(#paint0_linear_7862_757)" />
+  </g>
+  <defs>
+    <filter id="filter0_f_7862_757" x="0.632812" y="0.0458984" width="47.9805" height="202.859" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+      <feFlood flood-opacity="0" result="BackgroundImageFix" />
+      <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape" />
+      <feGaussianBlur stdDeviation="5.5" result="effect1_foregroundBlur_7862_757" />
+    </filter>
+    <linearGradient id="paint0_linear_7862_757" x1="25.6133" y1="11.3371" x2="25.6133" y2="192" gradientUnits="userSpaceOnUse">
+      <stop stop-color="#FF200F" />
+      <stop offset="1" stop-color="#991309" stop-opacity="0" />
+    </linearGradient>
+  </defs>
+</svg>
+
+
+    </div>
+
 
     <div class="container">
       <div class="spivpracia-container">
